src/objects/Alert__c.object
<CustomObject>
    <description>Used to store Provider and Member Alerts which are imported into SF from UHG SharePoint</description>
    <fields>
        <fullName>Alert_Comments__c</fullName>
        <description>Alert Comments</description>
        <label>Alert Comments</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Alert_Title__c</fullName>
        <description>Alert&apos;s title</description>
        <label>Alert Title</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>Start Date for alert&apos;s Effective Date</description>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>End Date of alert&apos;s effective date</description>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <description>Based on alert type, either member&apos;s group # or provider&apos;s facility #</description>
        <label>Group Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Number__c</fullName>
        <description>Based on alert type, either member&apos;s id or provider&apos;s tax id</description>
        <label>ID Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SharePoint_ID__c</fullName>
        <description>External Id to found on excel worksheets for the row (alert)  stored in SharePoint</description>
        <externalId>true</externalId>
        <label>SharePoint ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Indicates what type of alert: member, member group, provider, provider group</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Producer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provider Group</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <label>Alert</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Group_Number__c</columns>
        <columns>Alert_Title__c</columns>
        <columns>Alert_Comments__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Type__c</columns>
        <columns>ID_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Gregory</fullName>
        <columns>NAME</columns>
        <columns>ID_Number__c</columns>
        <columns>Type__c</columns>
        <columns>Alert_Title__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Producer</value>
        </filters>
        <label>Gregory</label>
    </listViews>
    <nameField>
        <displayFormat>A-{000000000}</displayFormat>
        <label>Alert ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Alert_Comments_cannot_be_Blank</fullName>
        <active>false</active>
        <description>Does not allow user to save an alert if Alert Comment is BLANK</description>
        <errorConditionFormula>ISBLANK( Alert_Comments__c )</errorConditionFormula>
        <errorDisplayField>Alert_Comments__c</errorDisplayField>
        <errorMessage>You must enter Alert Comments in order to save this record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_Date_cannot_be_before_Effective_Date</fullName>
        <active>true</active>
        <errorConditionFormula>End_Date__c &lt;  Effective_Date__c</errorConditionFormula>
        <errorMessage>Effective Date must be the same as or before End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Group_Number_Required</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(OR(ISPICKVAL( Type__c , &apos;Member Group&apos;),ISPICKVAL( Type__c , &apos;Provider Group&apos;)),  ISBLANK(	Group_Number__c) ),true,false)</errorConditionFormula>
        <errorDisplayField>Group_Number__c</errorDisplayField>
        <errorMessage>Group Number  is required when the type is Member Group or Provider Group</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ID_Number_Required</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(OR(ISPICKVAL( Type__c , &apos;Member&apos;),ISPICKVAL( Type__c , &apos;Provider&apos;),ISPICKVAL( Type__c , &apos;Producer&apos;)),  ISBLANK(ID_Number__c) ),true,false)</errorConditionFormula>
        <errorDisplayField>ID_Number__c</errorDisplayField>
        <errorMessage>ID number is required when the type is Member or Provider or Producer</errorMessage>
    </validationRules>
</CustomObject>